Added login with firebase, created user on the fly

--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -8,6 +8,7 @@
     "hard": "Hard",
     "localPlay": "Local Play",
     "onlinePlay": "Online Play",
+    "online": "Online",
     "wins": "Wins",
 
 
