--- a/assets/l10n/app_ja.arb
+++ b/assets/l10n/app_ja.arb
@@ -8,6 +8,7 @@
     "hard": "難しい",
     "localPlay": "ローカルプレイ",
     "onlinePlay": "オンラインプレイ",
+    "online": "オンライン",
     "wins": "対",
     
     "hello": "ヤッホ {username}"
