--- a/assets/l10n/app_ja.arb
+++ b/assets/l10n/app_ja.arb
@@ -10,6 +10,53 @@
     "onlinePlay": "オンラインプレイ",
     "online": "オンライン",
     "wins": "対",
-    
-    "hello": "ヤッホ {username}"
+    "noGamesYet": "まだゲームがありません",
+    "friend": "友達",
+    "friends": "友達",
+    "hostGame": "ゲームをホストする",
+    "allGames": "全てのゲーム",
+    "anyone": "誰でも",
+    "addNewFriend": "友達を追加する",
+    "invite": "招待",
+    "join": "参加する",
+    "removeFriend": "友達を削除する",
+    "no": "いいえ",
+    "yes": "はい",
+    "exitGame": "ゲームを退出する",
+    "areYouSureToQuit": "本当に退出しますか？",
+    "gameFinished": "ゲーム終了！",
+    "playAgain": "もう一度プレイしますか？",
+    "changeUsername": "ユーザーネームを変更する",
+    "newUsername": "新しいユーザーネーム",
+    "language": "言語",
+    "onlineUsername": "オンラインユーザーネーム",
+    "friendsUsername": "友達のユーザーネーム",
+    "decline": "却下",
+    "cancel": "キャンセル",
+    "gameInviteDeclined": "ゲームの招待が却下されました",
+    "joiningGame": "ゲームに参加中...",
+    "won": "勝ち",
+    "lost": "負け",
+    "rematch": "もう一度プレイしますか？",
+    "quit": "退出",
+    "hostNewGame": "新しいゲームをホストする",
+    "waitingForSecondPlayer": "２人目のプレイヤーを待っています...",
+    "play": "プレイ",
+    "username": "ユーザーネーム",
+    "usernameMoreThanFour": "ユーザーネームは４文字以上でないといけません",
+    "usernameTaken": "このユーザーネームは既に使用されています",
+    "finished": "終了",
+    "playerQuit": "プレイヤーが退出しました...",
+    "noFriends": "友達がいません...",
+    "noOne": "誰もいません..",
+    "gameTied": "引き分け",
+    "bluePlayerWon": "ブループレイヤーの勝ち！",
+    "redPlayerWon": "レッドプレイヤーの勝ち！",
+    "hostEndedGame": "ホストがゲームを終了しました",
+
+
+    "areYouSureToRemove": "本当に{username}を削除しますか？",
+    "invitedYou": "{username}が招待しました",
+    "waitingFor": "{username}を待っています",
+    "couldntFind": "{username}が見つかりませんでした"
 }
