Updated bundle id, updated last translations.

--- a/assets/l10n/app_ja.arb
+++ b/assets/l10n/app_ja.arb
@@ -53,22 +53,22 @@
     "bluePlayerWon": "ブループレイヤーの勝ち！",
     "redPlayerWon": "レッドプレイヤーの勝ち！",
     "hostEndedGame": "ホストがゲームを終了しました",
-    "newUpdate": "Update available",
-    "goDownload": "Press the button to go to the app store to download!",
-    "download": "Download",
-    "badWord": "Bad words aren't allowed",
-    "restart": "Restart",
-    "resign": "Resign",
+    "newUpdate": "新しいアップデート",
+    "goDownload": "ダウンロードはこちら",
+    "download": "ストア",
+    "badWord": "悪質な言葉は使用できません",
+    "restart": "再起動",
+    "resign": "やめる",
 
-    "howToPlay": "How To Play",
-    "htpTitleOverview": "Overview",
-    "htpOne": "Just like regular Tic Tac Toe, you win with 3 in a row, but in this game, you have numbers 1 - 7.\nSo you are able to over take your opponent with a higher number.",
-    "htpTitleMoves": "How to move",
-    "howToMoveOne": "Tap a usable number and tap the square you want to go",
-    "howToMoveTwo": "Tap and drag the usable number to the square you want to go",
-    "htpTitleTips": "Tips",
-    "tipOne": "Number 1 can be used any number of times.",
-    "tipTwo": "The same number cannot over take, so a 7 cannot overtake another 7.",
+    "howToPlay": "遊び方",
+    "htpTitleOverview": "概要",
+    "htpOne": "通常のTik Tac Toeと同じように、先に１列（３マス）そろえた人が勝ちです。ただこのゲームでは、数字（１ー７）を使用します。 \n相手が置いた数字よりも数値の大きな数字を使えば、そのマスを奪うことができます。",
+    "htpTitleMoves": "やり方",
+    "howToMoveOne": "自分が持っている数字をタップして、その数字を置きたいマスをタップする",
+    "howToMoveTwo": "自分が持っている数字をタップ＆ドラッグして、その数字を置きたいマスまで動かす",
+    "htpTitleTips": "ヒント",
+    "tipOne": "数字「１」は何度でも使用できます。",
+    "tipTwo": "同じ値の数字では、マスを奪うことはできません。（相手の「７」の上に自分の「７」を置くことはできない）",
 
 
     "areYouSureToRemove": "本当に{username}を削除しますか？",
